# stacktrace-error

./: CMakeLists.txt  Dockerfile  build_and_run.sh  docker-compose.yml  main.cpp
